[package]
name = "dioxus-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-signals = { git = "https://github.com/dioxuslabs/dioxus" }
futures = "0.3.29"
slotmap = "1.0.7"
tray-icon = "0.9.0"

[dev-dependencies]
image = "0.24.7"
